updated node version

--- a/package.json
+++ b/package.json
@@ -23,8 +23,8 @@
     "uuid": "27061cd1-3406-4c6d-aa86-bd322dcc762f"
   },
   "engines": {
-    "node": ">=14.19.1 <=18.x.x",
-    "npm": ">=6.0.0"
+    "node": "v18.16.1",
+    "npm": "9.5.1"
   },
   "license": "MIT"
 }
